--- a/rive_exp_01.html
+++ b/rive_exp_01.html
@@ -9,7 +9,7 @@
     <script src="https://unpkg.com/@rive-app/canvas"></script>
     <script>
       const r = new rive.Rive({
-        src: "https://files.cargocollective.com/c854928/Rive_experiment_01.riv",
+        src: "https://dhoogstad.github.io/rive/Rive_experiment_01.riv",
         canvas: document.getElementById("canvas"),
         autoplay: true,
         onLoad: () => {
