--- a/rive_exp_01.html
+++ b/rive_exp_01.html
@@ -12,6 +12,7 @@
         src: "https://dhoogstad.github.io/rive/Rive_experiment_01.riv",
         canvas: document.getElementById("canvas"),
         autoplay: true,
+        stateMachines: "State Machine 1",
         onLoad: () => {
           // Ensure the drawing surface matches the canvas size and device pixel ratio
           r.resizeDrawingSurfaceToCanvas();
