--- a/rive_exp_01.html
+++ b/rive_exp_01.html
@@ -4,7 +4,7 @@
     <title>Rive Experiment 1</title>
   </head>
   <body>
-    <canvas id="canvas" width="1080" height="1350"></canvas>
+    <canvas id="canvas" width="100%" height="100%"></canvas>
 
     <script src="https://unpkg.com/@rive-app/canvas"></script>
     <script>
