--- a/rive_exp_01.html
+++ b/rive_exp_01.html
@@ -5,23 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
     <script src="https://unpkg.com/@rive-app/canvas@2.17.3"></script>
-    <style type="text/css">
-      html,body{ 
-        height:100%
-      }
-      body{
-        background: #336bff;
-      }
-      canvas{
-        width:1080px;
-        height:1350px;
-      }
-    </style>
+    <style>
+body, html {
+    margin: 0;
+    font-size: 0px;
+    font-family: Arial, sans-serif;
+    overflow-x: hidden; /* Prevent horizontal scrolling */
+    overflow-y: auto;   /* Allow vertical scrolling */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+canvas {
+    width: 1080px; /* Set canvas width manually */
+    margin: 0 auto; /* Center the canvas horizontally */
+    display: block; /* Ensure proper centering */
+}
+</style>
   </head>
   <body>
     <canvas id="canvas"></canvas>
-
-    
     <script>
       const r = new rive.Rive({
         src: "https://dhoogstad.github.io/rive/Rive_experiment_01.riv",
