--- a/rive_exp_01.html
+++ b/rive_exp_01.html
@@ -15,6 +15,7 @@ body, html {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: yellow;
 }
 canvas {
     width: 1080px; /* Set canvas width manually */
