--- a/rive_exp_01.html
+++ b/rive_exp_01.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
-    <script src="https://unpkg.com/@rive-app/canvas@2.17.3"></script>
+    <script src="https://unpkg.com/@rive-app/canvas"></script>
     <style>
 body, html {
     margin: 0;
     font-size: 0px;
     font-family: Arial, sans-serif;
     overflow-x: hidden; /* Prevent horizontal scrolling */
-    overflow-y: auto;   /* Allow vertical scrolling */
+    overflow-y: hidden;   /* Prevent vertical scrolling */
     display: flex;
     flex-direction: column;
     align-items: center;
