--- a/rive_exp_01.html
+++ b/rive_exp_01.html
@@ -9,16 +9,15 @@
 body, html {
     margin: 0;
     font-size: 0px;
-    font-family: Arial, sans-serif;
     overflow-x: hidden; /* Prevent horizontal scrolling */
     overflow-y: hidden;   /* Prevent vertical scrolling */
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: yellow;
+    background-color: red;
 }
 canvas {
-    width: 1080px; /* Set canvas width manually */
+    width: 100%; /* Set canvas width manually */
     margin: 0 auto; /* Center the canvas horizontally */
     display: block; /* Ensure proper centering */
 }
