--- a/rive_exp_01.html
+++ b/rive_exp_01.html
@@ -8,18 +8,17 @@
     <style>
 body, html {
     margin: 0;
-    font-size: 0px;
     overflow-x: hidden; /* Prevent horizontal scrolling */
     overflow-y: hidden;   /* Prevent vertical scrolling */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     background-color: red;
 }
 canvas {
-    width: 100%; /* Set canvas width manually */
-    margin: 0 auto; /* Center the canvas horizontally */
-    display: block; /* Ensure proper centering */
+  position: fixed;
+  left: 0;
+  display: block;
+  height: 100%;
+  width: auto;
+  background:yellow;
 }
 </style>
   </head>
