--- a/rive_exp_01.html
+++ b/rive_exp_01.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Rive Links Uitlijnen</title>
+    <title>Rive Experiment</title>
     <script src="https://unpkg.com/@rive-app/canvas"></script>
     <style>
         body, html {
