--- a/rive_exp_01.html
+++ b/rive_exp_01.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Rive Experiment</title>
+    <title>Rive Experimentje</title>
     <script src="https://unpkg.com/@rive-app/canvas"></script>
     <style>
         body, html {
             margin: 0;
             padding: 0;
             overflow: hidden;
-            background: purple;
+            background: greenyellow;
         }
         canvas {
             position: fixed;
@@ -24,6 +24,7 @@
     <script>
         const canvas = document.getElementById("canvas");
         const aspectRatio = 1080 / 1350;
+        let resizeTimeout;
 
         function resize() {
             const dpr = window.devicePixelRatio || 1;
@@ -38,6 +39,11 @@
             r.resizeDrawingSurfaceToCanvas();
         }
 
+        function debounceResize() {
+            clearTimeout(resizeTimeout);
+            resizeTimeout = setTimeout(resize, 100);
+        }
+
         const r = new rive.Rive({
             src: "https://dhoogstad.github.io/rive/Rive_experiment_01.riv",
             canvas: canvas,
@@ -46,7 +52,7 @@
             onLoad: resize
         });
 
-        window.addEventListener("resize", resize);
+        window.addEventListener("resize", debounceResize);
     </script>
 </body>
 </html>
